--- a/Src/Invoice/Infrastructure/Views/CreateInvoice/Content.cshtml
+++ b/Src/Invoice/Infrastructure/Views/CreateInvoice/Content.cshtml
@@ -8,9 +8,12 @@
     <title>@Model.Design.Hero.Title</title>
     <link rel="stylesheet" href="/css/styles.css" type="text/css" media="all"/>
     <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
+    <script src="/js/invoiceSnackBar.js"></script>
+    <script src="/js/invoiceForm.js"></script>
 </head>
 
 <body>
+@Html.Partial("../Shared/Snackbars.cshtml")
 <header class="bg-white shadow-sm lg:static lg:overflow-y-visible">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="relative flex justify-between xl:grid xl:grid-cols-12 lg:gap-8">
@@ -105,6 +108,9 @@
         </div>
     </form>
 </div>
+<script type="text/javascript">
+    new UpdateStatusSse().execute();
+</script>
 </body>
 
 </html>
