--- a/Src/Invoice/Infrastructure/Views/InvoiceView/Content.cshtml
+++ b/Src/Invoice/Infrastructure/Views/InvoiceView/Content.cshtml
@@ -7,6 +7,7 @@
     <title>@Model.Design.Hero.Title</title>
     <link rel="stylesheet" href="/css/styles.css" type="text/css" media="all"/>
     <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
+    <script src="/js/invoiceSnackBar.js"></script>
     <script src="/js/invoiceView.js"></script>
     <style type="text/tailwindcss">
         @@layer components {
@@ -33,6 +34,7 @@
     </style>
 </head>
 <body class="h-full">
+@Html.Partial("../Shared/Snackbars.cshtml")
 
 <div class="min-h-full">
     <nav class="border-b border-gray-200 bg-white">
@@ -127,5 +129,8 @@
         </div>
     </main>
 </div>
+<script type="text/javascript">
+    new UpdateStatusSse(@Model.Invoice.Id).execute();
+</script>
 </body>
 </html>
