--- a/CsharpKioskDemoDotnet/Src/Invoice/Infrastructure/Views/CreateInvoiceForm/Content.cshtml
+++ b/CsharpKioskDemoDotnet/Src/Invoice/Infrastructure/Views/CreateInvoiceForm/Content.cshtml
@@ -1,4 +1,4 @@
-﻿@model CsharpKioskDemoDotnet.Invoice.Application.Features.Tasks.CreateInvoice.InvoiceFormDto
+﻿@model CsharpKioskDemoDotnet.Shared.Form.FormDto
 <!DOCTYPE html>
 <html lang="en">
 
